[tool.poetry]
name = "test"
version = "0.1.0"
description = "Environnement Jupyter"
authors = ['test@gmail.com']

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.9"
ipywidgets = "^7.6.5"
voila = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
